# awatchlog

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: awatchlog.rs
src/config/: configuration.rs  credentials.rs  discovery.rs  mod.rs  parser.rs
src/logger/: mod.rs  state.rs
tests/: run.sh  write
tests/python/: Dockerfile  awslogs.conf  watch
tests/rust/: Dockerfile  config.toml.dist  credentials.toml.dist
