[package]
name = "awatchlog"
version = "0.1.0"
authors = ["Pierre Tomasina <tomasinap@gmail.com>"]
license = "BSD-3-Clause"
exclude = ["tests/**/*", "target"]
include = ["src/**/*", "Cargo.toml"]
publish = false

[dependencies]
rusoto_core = "0.34.0"
rusoto_logs = "0.34.0"
rusoto_credential = "0.13.0"
chrono = "0.4.5"
getopts = "0.2.18"
toml = "~0.4.6"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.24"
hyper = "0.12"
shuteye = "0.3.3"
sha1 = "~0.6.0"
regex = "~1.0.0"

[[bin]]
name = "awatchlog"
path = "bin/main.rs"
doc = false

[lib]
name = "awatchlog"
path = "src/awatchlog.rs"
test = true
